samples/python/tilengine.py

"""
Tilengine - 2D Graphics library with raster effects
Copyright (c) 2015-2017 Marc Palacios Domenech (megamarc@hotmail.com)
All rights reserved.
"""
"""
Redistribution and use in source and binary forms, with or without modification
are permitted provided that the following conditions are met:

1. Redistributions of source code must retain the above copyright notice, this
   list of conditions and the following disclaimer.

2. Redistributions in binary form must reproduce the above copyright notice,
   this list of conditions and the following disclaimer in the documentation
   and/or other materials provided with the distribution.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
"""

from sys import platform as _platform
from ctypes import *

"""
Python wrapper for Tilengine retro graphics engine
Updated to library version 1.14.0
http://www.tilengine.org
"""


# constants --------------------------------------------------------------------

class WindowFlags(object):
	"""
	List of flag values for window creation
	"""
	FULLSCREEN = (1 << 0)
	VSYNC = (1 << 1)
	S1 = (1 << 2)
	S2 = (2 << 2)
	S3 = (3 << 2)
	S4 = (4 << 2)
	S5 = (5 << 2)


class Flags(object):
	"""
	List of flags for tiles and sprites
	"""
	FLIPX = (1 << 15)  # horizontal flip
	FLIPY = (1 << 14)  # vertical flip
	ROTATE = (1 << 13)  # row/column flip (unsupported, Tiled compatibility)
	PRIORITY = (1 << 12)  # tile goes in front of sprite layer


class Error(object):
	"""
	List of possible error codes returned by Engine::get_last_error()
	"""
	OK = 0  # No error
	OUT_OF_MEMORY = 1  # Not enough memory
	IDX_LAYER = 2  # Layer index out of range
	IDX_SPRITE = 3  # Sprite index out of range
	IDX_ANIMATION = 4  # Animation index out of range
	IDX_PICTURE = 5  # Picture or tile index out of range
	REF_TILESET = 6  # Invalid Tileset reference
	REF_TILEMAP = 7  # Invalid Tilemap reference
	REF_SPRITESET = 8  # Invalid Spriteset reference
	REF_PALETTE = 9  # Invalid Palette reference
	REF_SEQUENCE = 10  # Invalid SequencePack reference
	REF_SEQPACK = 11  # Invalid Sequence reference
	REF_BITMAP = 12  # Invalid Bitmap reference
	NULL_POINTER = 13  # Null pointer as argument
	FILE_NOT_FOUND = 14  # Resource file not found
	WRONG_FORMAT = 15  # Resource file has invalid format
	WRONG_SIZE = 16  # A width or height parameter is invalid
	UNSUPPORTED = 17  # Unsupported function


class Blend(object):
	"""
	Available blending modes
	"""
	NONE = 0
	MIX25 = 1
	MIX50 = 2
	MIX75 = 3
	ADD = 4
	SUB = 5
	MOD = 6
	CUSTOM = 7
	MIX = MIX50


class Input(object):
	"""
	Available inputs to query in Window::get_input()
	"""
	NONE = 0
	UP = 1
	DOWN = 2
	LEFT = 3
	RIGHT = 4
	A = 5
	B = 6
	C = 7
	D = 8


class Overlay(object):
	"""
	Available CRT overlay patterns
	"""
	NONE = 0
	SHADOWMASK = 1
	APERTURE = 2
	SCANLINES = 3
	CUSTOM = 4


class TilengineException(Exception):
	"""
	Tilengine exception class
	"""
	def __init__(self, value):
		self.value = value

	def __str__(self):
		return repr(self.value)


# structures ------------------------------------------------------------------
class Tile(Structure):
	"""
	Tile data contained in each cell of a Tilemap object
	"""
	_fields_ = [
		("index", c_ushort),
		("flags", c_ushort)
	]


class ColorStrip(Structure):
	"""
	Data used to define each frame of a color cycle for Sequence objects 
	"""
	_fields_ = [
		("delay", c_int),
		("first", c_ubyte),
		("count", c_ubyte),
		("dir", c_ubyte)
	]


class SequenceFrame(Structure):
	"""
	Data used to define each frame of an animation for Sequence objects
	"""
	_fields_ = [
		("index", c_int),
		("delay", c_int)
	]


class SpriteInfo(Structure):
	"""
	Data returned by Spriteset::get_sprite_info() with dimensions of the required sprite 
	"""
	_fields_ = [
		("w", c_int),
		("h", c_int)
	]


class TileInfo(Structure):
	"""
	Data returned by Layer::get_tile() about a given tile inside a background layer
	"""
	_fields_ = [
		("index", c_ushort),
		("flags", c_ushort),
		("row", c_int),
		("col", c_int),
		("xoffset", c_int),
		("yoffset", c_int),
		("color", c_ubyte),
		("type", c_ubyte),
		("empty", c_bool)
	]


class SpriteData(Structure):
	"""
	Data used to create Spriteset objects
	"""
	_fields_ = [
		("name", c_char_p),
		("x", c_int),
		("y", c_int),
		("w", c_int),
		("h", c_int)
	]


class PixelMap(Structure):
	"""
	Data passed to Layer::set_pixel_mapping() in a list
	"""
	_fields_ = [
		("dx", c_short),
		("dy", c_short)
	]


class Color(object):
	"""
	Represents a color value in RGB format
	"""
	def __init__(self, r, g, b):
		self.r = r
		self.g = g
		self.b = b


# module internal variables
_tln = None			# handle to shared native library
_engine = None		# singleton engine
_window = None		# singleton window

# load native library
if _platform == "linux" or _platform == "linux2":
	_tln = cdll.LoadLibrary("libTilengine.so")
elif _platform == "win32":
	_tln = cdll.LoadLibrary("Tilengine.dll")
elif _platform == "darwin":
	_tln = cdll.LoadLibrary("Tilengine.dylib")

# callback types for user functions
_raster_callback_function = CFUNCTYPE(None, c_int)
_blend_function = CFUNCTYPE(c_ubyte, c_ubyte, c_ubyte)


# return c_char_p compatible string
def _encode_string(string):
	if string is not None:
		return string.encode()
	else:
		return None


# error handling --------------------------------------------------------------
_tln.TLN_GetLastError.restype = c_int
_tln.TLN_GetErrorString.argtypes = [c_int]
_tln.TLN_GetErrorString.restype = c_char_p


# raises exception depending on error code
def _raise_exception(result=False):
	if result is not True:
		error = _tln.TLN_GetLastError()
		error_string = _tln.TLN_GetErrorString(error)
		raise TilengineException(error_string.decode())


# basic management ------------------------------------------------------------
_tln.TLN_Init.argtypes = [c_int, c_int, c_int, c_int, c_int]
_tln.TLN_Init.restype = c_bool
_tln.TLN_GetNumObjects.restype = c_int
_tln.TLN_GetVersion.restype = c_int
_tln.TLN_GetUsedMemory.restype = c_int
_tln.TLN_SetBGColor.argtypes = [c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_SetBGColorFromTilemap.argtypes = [c_void_p]
_tln.TLN_SetBGColorFromTilemap.restype = c_bool
_tln.TLN_SetBGBitmap.argtypes = [c_void_p]
_tln.TLN_SetBGBitmap.restype = c_bool
_tln.TLN_SetBGPalette.argtypes = [c_void_p]
_tln.TLN_SetBGPalette.restype = c_bool
_tln.TLN_SetRenderTarget.argtypes = [c_void_p, c_int]
_tln.TLN_UpdateFrame.argtypes = [c_int]
_tln.TLN_BeginFrame.argtypes = [c_int]
_tln.TLN_DrawNextScanline.restype = c_bool
_tln.TLN_SetLoadPath.argtypes = [c_char_p]


class Engine(object):
	"""
	Main object for engine creation and rendering
	"""

	def __init__(self, num_layers, num_sprites, num_animations):
		self.layers = [Layer(n) for n in range(num_layers)]
		self.sprites = [Sprite(n) for n in range(num_sprites)]
		self.animations = [Animation(n) for n in range(num_animations)]
		self.version = _tln.TLN_GetVersion()
		self.num_layers = num_layers
		self.num_sprites = num_sprites
		self.num_animations = num_animations
		self.cb_raster_func = None
		self.cb_blend_func = None

	@classmethod
	def create(cls, width, height, num_layers, num_sprites, num_animations):
		"""
		Static method that creates a new instance of the engine
		:param width: horizontal resolution in pixels
		:param height: vertical resolution in pixels
		:param num_layers: number of background layers
		:param num_sprites: number of sprites
		:param num_animations: number of animations
		:return: new instance
		"""
		global _engine
		if _engine is not None:
			return _engine
		ok = _tln.TLN_Init(width, height, num_layers, num_sprites, num_animations)
		if ok is True:
			_engine = Engine(num_layers, num_sprites, num_animations)
			return _engine
		else:
			_raise_exception(ok)

	def delete(self):
		"""
		De-initialises engine and frees used resources
		"""
		global _engine
		_engine = None
		_tln.TLN_Deinit()

	def get_num_objects(self):
		"""
		:return: the number of objets used by the engine so far
		"""
		return _tln.TLN_GetNumObjects()

	def get_used_memory(self):
		"""
		:return: the total amount of memory used by the objects
		"""
		return _tln.TLN_GetUsedMemory()

	def set_background_color(self, param):
		"""
		Sets the background color
		:param param: can be a Color object or a Tilemap object. In this case, 
		it assigns de background color as defined inside the tilemap
		"""
		param_type = type(param)
		if param_type is Color:
			_tln.TLN_SetBGColor(param.r, param.g, param.b)
		elif param_type is Tilemap:
			_tln.TLN_SetBGColorFromTilemap(param)
			
	def disable_background_color(self):
		"""
		Disales background color rendering. If you know that the last background layer will always
		cover the entire screen, you can disable it to gain some performance
 		"""
		_tln.TLN_DisableBGColor()

	def set_background_bitmap(self, bitmap):
		"""
		Sets a static bitmap as background
		:param bitmap: Bitmap object to set as background. Set None to disable it.
		"""
		ok = _tln.TLN_SetBGBitmap(bitmap)
		_raise_exception(ok)

	def set_background_palette(self, palette):
		"""
		Sets the palette for the background bitmap. By default it is assigned the palette
		of the bitmap passed in `Engine::set_background_bitmap()` 
		:param palette: Palette object to set
		"""
		ok = _tln.TLN_SetBGPalette(palette)
		_raise_exception(ok)

	def set_raster_callback(self, raster_callback):
		"""
		Enables raster effects processing, where any render parameter can be modified mid frame, between scanlines.
		:param raster_callback: name of the user-defined function to call for each scanline. Set None to disable.
		This function takes one integer parameter that indicates the current scanline, between 0 and vertical resolution:
		```
		# raster callback example
		def raster_callback(num_scanline):
			# do something depending on the value of num_scanline
		```
		"""
		self.cb_raster_func = _raster_callback_function(raster_callback)
		_tln.TLN_SetRasterCallback(self.cb_raster_func)

	def set_render_target(self, pixels, pitch):
		"""
		Sets the output surface for rendering
		:param pixels: Pointer to the start of the target framebuffer
		:param pitch: Number of bytes per each scanline of the framebuffer 
		"""
		_tln.TLN_SetRenderTarget(pixels, pitch)

	def update_frame(self, num_frame=0):
		"""
		Draws the frame to the previously specified render target
		:param num_frame: optional timestamp value (frame number) for animation control
		"""
		_tln.TLN_UpdateFrame(num_frame)

	def begin_frame(self, num_frame=0):
		"""
		Starts active rendering of the current frame, istead of the callback-based `Engine::update_frame()`.
		Used in conjunction with `Engine::draw_next_scanline()` 
		:param num_frame: optional timestamp value (frame number) for animation control
		"""
		_tln.TLN_BeginFrame(num_frame)

	def draw_next_scanline(self):
		"""
		Draws the next scanline of the frame started with `Engine::begin_frame()` or `Window::begin_frame()`
		:return: True if there are still lines to be drawn, or False when the frame is camplete.
		"""
		return _tln.TLN_DrawNextScanline()
